--- a/lab6/wordnet/package.json
+++ b/lab6/wordnet/package.json
@@ -25,6 +25,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-graph-vis": "^1.0.2",
     "reason-react": "^0.7.0"
   }
 }
