Upgrade @aantron/repromise to reason-promise

--- a/lab6/wordnet/bsconfig.json
+++ b/lab6/wordnet/bsconfig.json
@@ -15,7 +15,7 @@
         "reason-react",
         "bs-css",
         "bs-fetch",
-        "@aantron/repromise",
+        "reason-promise",
         "@glennsl/bs-json",
         "@jsiebern/bs-material-ui",
         "@mscharley/bs-material-ui-icons"
